...
  Widget _buildActionMenu(ListingModel listing) {
    return Material(
      color: Colors.white,
      borderRadius: BorderRadius.circular(20),
      elevation: 2,
      child: PopupMenuButton<String>(
        key: const Key('listing_more_menu'),
        icon: Icon(
          Icons.more_vert,
          size: 20,
          color: AppTheme.authPrimaryColor,
        ),
        padding: EdgeInsets.zero,
...

          if (listing.listingStatus == 'DRAFT') {
            items.add(const PopupMenuItem(
              value: 'publish',
              child: ListTile(
                leading: Icon(Icons.publish, size: 20, color: Colors.purple),
                title: Text('Publish'),
                dense: true,
                contentPadding: EdgeInsets.zero,
              ),
            ));
          }

...
